--- a/styles/style.scss
+++ b/styles/style.scss
@@ -787,7 +787,7 @@ a {
     .footer{
         max-height: initial;
         height: initial;
-
+        padding-bottom: 4rem;
         gap: 3rem;
         flex-direction: column;
         &__block-1{
